# bicycle-computer-prototype

./: .gitignore  CMakeLists.txt  README  _start.c  isr_vector.S  main.c  start.S
cmake/: arm-none-eabi.cmake  cortex_m4.cmake
